apostle must hear of it

--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -15,7 +15,8 @@
         "tabs",
         "bookmarks",
         "storage",
-        "identity"
+        "identity",
+        "activeTab"
     ],
     "icons": {
         "16" : "icon.png",
