--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "postcss": "^8.4.14",
     "react-router-dom": "6.2",
     "tailwindcss": "^3.0.24",
+    "tts-react": "^3.0.0",
     "youtube-caption-extractor": "^1.4.3",
     "youtube-transcript": "^1.0.6"
   }
