--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "reactjs-chrome",
-  "author": "Himanshu Batra",
+  "name": "Selman",
+  "author": "Wisdom Nwakaku",
   "version": "1.0.1",
   "main": "index.js",
   "license": "MIT",
@@ -30,6 +30,7 @@
     "autoprefixer": "^10.4.7",
     "axios": "^1.4.0",
     "postcss": "^8.4.14",
+    "react-icons": "^4.10.1",
     "react-router-dom": "6.2",
     "tailwindcss": "^3.0.24",
     "tts-react": "^3.0.0",
