--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -8,16 +8,17 @@
         "default_title": "React Boilerplate",
         "default_icon" : "icon.png"
     },
-    "chrome_url_overrides": {
-        "newtab": "newTab.html"
-    },
     "permissions": [
         "tabs",
         "bookmarks",
         "storage",
         "identity",
-        "activeTab"
+        "activeTab",
+        "scripting",
+        "https://www.youtube.com/*",
+        "http://localhost:5000/api/*"
     ],
+    "host_permissions": ["https://www.youtube.com/*"],
     "icons": {
         "16" : "icon.png",
         "48" : "icon.png",
@@ -29,7 +30,7 @@
     },
     "content_scripts": [
         {
-            "matches": ["<all_urls>"],
+            "matches": ["https://www.youtube.com/*"],
             "js": ["contentScript.js"]
         }
     ]
